<resources>
    <string name="app_name">Aparking</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>

    <!-- 오쥬 -->
    <string name="snstitle">SNS회원가입</string>
    <string name="title">회원가입</string>
    <string name="title1">이름</string>
    <string name="title2">이메일</string>
    <string name="title3">비밀번호</string>
    <string name="title4">비밀번호 확인</string>
    <string name="title5">전화번호</string>
    <string name="title6">인증번호 확인</string>
    <string name="title_activity_check_qr">check_qr</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">user name</string>
    <string name="nav_header_subtitle">aparking@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="customer_name">이정열</string>
    <string name="customer_telnumber">010-9041-1588</string>
    <string name="customer_email">ljy2784437@gmail.com</string>


    <string name="menu_mypage">내정보</string>
    <string name="menu_bookmark">즐겨찾기</string>
    <string name="menu_reservationInfo">예약내역</string>
    <string name="menu_payInfo">결제내역</string>
    <string name="menu_consultant">상담하기</string>
    <string name="menu_review">후기 (test)</string>

    <string name="qrcheckInfo">주차장 QR코드 인식기에 인식시켜주세요</string>
    <string name="qrcheckInfo_not">예약된 주차장이 없습니다</string>
</resources>