<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mypage"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_mypage" />

        <item
            android:id="@+id/nav_reservationInfo"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_reservationInfo" />

        <item
            android:id="@+id/nav_payInfo"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_payInfo" />

        <item
            android:id="@+id/nav_consultant"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_consultant" />
    </group>
</menu>