<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="홈" />

        <item
            android:id="@+id/nav_mypage"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_mypage" />

        <item
            android:id="@+id/nav_reservationInfo"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_reservationInfo" />

        <item
            android:id="@+id/nav_payInfo"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_payInfo" />

        <item
            android:id="@+id/nav_consultant"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_consultant" />

</menu>
