<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_mypage">

    <fragment
        android:id="@+id/nav_mypage"
        android:name="com.example.aparking.ui.mypage.MypageFragment"
        android:label="@string/menu_mypage"
        tools:layout="@layout/fragment_mypage" />

    <fragment
        android:id="@+id/nav_reservationInfo"
        android:name="com.example.aparking.ui.reservation.ReservationInfo"
        android:label="@string/menu_reservationInfo"
        tools:layout="@layout/fragment_mypage" />

    <fragment
        android:id="@+id/nav_payInfo"
        android:name="com.example.aparking.ui.pay.PayInfoFragment"
        android:label="@string/menu_payInfo"
        tools:layout="@layout/fragment_payinfo" />
    <fragment
        android:id="@+id/nav_consultant"
        android:name="com.example.aparking.ui.consultant.ConsultantFragment"
        android:label="@string/menu_consultant"
        tools:layout="@layout/fragment_consultant" />
</navigation>